[ft]:Update dependencies, add media services, and restructure app layout. Introduced new settings screen for managing downloads, implemented video download functionality, and removed unused components. Added rules for frontend development and adjusted app permissions in app.json.

--- a/app.json
+++ b/app.json
@@ -55,7 +55,8 @@
           "savePhotosPermission": "Allow Social Scraper to save videos to your photo library.",
           "isAccessMediaLocationEnabled": true
         }
-      ]
+      ],
+      "expo-asset"
     ],
     "experiments": {
       "typedRoutes": true,
