[fx]: updating gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 
 # dependencies
 node_modules/
+.cursor/
+.vscode/
+.idea/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Expo
 .expo/
